# SystemProgrammingSixthSemester

./: .gitignore  file_type_to_txt.py
Lab2/: script.sh
Lab3/: Cargo.toml  a.out  laba2.sh  sc  sc.c  sc.cpp  test
Lab3/src/: cli.rs  error.rs  main.rs
Lab4/: test  test.s
Lab5/: .~lock.IP_11_Panchenko_8.odt#  .~lock.ЗВІТ 9.odt#  CMakeLists.txt  IP_11_Panchenko_8.odt  Lab5  NNFileSystem.cpp  NNFileSystem.h  SDirectory.cpp  SDirectory.h  SFile.cpp  SFile.h  SFileSystemInfo.cpp  SFileSystemInfo.h  SLink.cpp  SLink.h  TCommonDeclarations.h  TFileSystem.cpp  TFileSystem.h  TFileVariant.h  main.cpp  start.sh  ЗВІТ 9.odt  Панченко_Сергій_ІП-11_5.odt
Lab5/Controllers/: TFileSystem.cpp  TFileSystem.h
Lab5/Errors/: TPathException.cpp  TPathException.h
Lab5/Helpers/: SOverloadVariant.h  THelpers.h
Lab5/Models/: SDirectory.cpp  SDirectory.h  SFile.cpp  SFile.h  SFileSystemInfo.cpp  SFileSystemInfo.h  SLink.cpp  SLink.h  TCommonDeclarations.h
Lab5/Models/Errors/: TPathException.cpp  TPathException.h
Lab5/prog/: Directory  Directory.c  Directory.h  FileSystem  FileSystem.c  FileSystem.h  build.sh  mount_fuse.sh  start.sh  test  test.c
